# DL_OpenCL

./: README.md
OpenCL-Neural-Network-main/: .gitignore  CMakeLists.txt  README.md  build.sh  create_benchmark_chart.py  create_single_chart.py  fix_activation_functions.cpp
OpenCL-Neural-Network-main/include/: activation_functions.hpp  benchmark.hpp  matrix_ops.hpp  opencl_utils.hpp
OpenCL-Neural-Network-main/kernels/: activation_functions.cl  matrix_ops.cl
OpenCL-Neural-Network-main/src/: activation_functions.cpp  benchmark.cpp  main.cpp  matrix_ops.cpp  opencl_utils.cpp
cl_cldl-master/: CMakeLists.txt
dlprimitives-master/tests/: test_weights.json
portDNN-master/samples/: CMakeLists.txt
portDNN-master/src/: CMakeLists.txt
